feat: estilização e containers

--- a/search-api/src/styles/global.scss
+++ b/search-api/src/styles/global.scss
@@ -2,12 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  
   }
   
 body {
     font:16px Arial, sans-serif; 
     color: #121214;
+    background-color:#D0B084;
+    text-align: center;
   }
   
   
