feature: pesquisa com id único

--- a/search-api/src/containers/Footer/Footer.scss
+++ b/search-api/src/containers/Footer/Footer.scss
@@ -1,6 +1,6 @@
 .Footer{
-    background-color: blueviolet;
-    font-weight: bold;
-    color:white; 
+    background-color:#b9928b;
+    color: #f7f4ec; 
+    font-weight: bolder;
     margin-top: 25px;
 }
