--- a/search-api/src/containers/Header/Header.scss
+++ b/search-api/src/containers/Header/Header.scss
@@ -1,5 +1,5 @@
 .Header{
-    background-color: blueviolet;
+    background-color: #1F2E55;
     font-weight: bold;
     color:white; 
     margin-bottom: 20px;
