--- a/search-api/src/styles/global.scss
+++ b/search-api/src/styles/global.scss
@@ -7,7 +7,7 @@
 body {
     font:16px Arial, sans-serif; 
     color: #121214;
-    background-color:#D0B084;
+    background-color:#D2BA9E;
     text-align: center;
   }
   
