feat:lista estilizada e componente search

--- a/search-api/src/containers/Footer/Footer.scss
+++ b/search-api/src/containers/Footer/Footer.scss
@@ -1,6 +1,6 @@
 .Footer{
-    background-color:#b9928b;
-    color: #f7f4ec; 
+    background-color:#d6a698;
+    color: #eeeade; 
     font-weight: bolder;
     margin-top: 25px;
 }
