--- a/search-api/src/containers/Header/Header.scss
+++ b/search-api/src/containers/Header/Header.scss
@@ -1,7 +1,7 @@
 .Header{
     background-color: #1F2E55;
     font-weight: bold;
-    color:white; 
-    margin-bottom: 20px;
+    color:#eeeade; 
+    margin-bottom: 1px;
     text-align:center; 
 }
